<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            android:paddingBottom="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_username_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username_loginScreen"
                app:errorEnabled="true"
                android:paddingBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/hint_password_loginScreen"
                android:paddingBottom="18dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:inputType="textPassword"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_passRepeat_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_pass_registerScreen"
                app:errorEnabled="true"
                android:paddingBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_passRepeat_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:inputType="textPassword"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:errorEnabled="true"
                android:paddingBottom="18dp"
                app:hintTextColor="@color/primaryDarkColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primaryDarkColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_names_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_names"
                app:errorEnabled="true"
                android:paddingBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_names_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_surnames_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_surnames"
                app:errorEnabled="true"
                android:paddingBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_surnames_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_birthDate_register"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthdate"
                app:errorEnabled="true"
                android:paddingBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_datePicker_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_francisco_bold"

                    android:inputType="date"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/content_description_spinner"
                android:paddingBottom="15dp"
                android:visibility="visible" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBox_terms_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco_regular"
                android:paddingBottom="10dp"
                app:errorEnabled="true"
                android:text="@string/checkbox_terms" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register_registerScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/san_francisco_bold"
                android:paddingBottom="10dp"
                android:text="@string/text_home_register"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login_registerScreen"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco_bold"
                android:paddingBottom="10dp"
                android:text="@string/text_home_login"
                android:textColor="@color/primaryDarkColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>